# src/routes/user.js
@@ -379,7 +379,7 @@ router.get('/kyc-session', auth, async (req,res) =>
     }
 })
 
-router.post('/kyc-update',  async (req,res) =>
+router.post('/kyc-update', async (req,res) =>
 {
     try{
         await user.kycUpdate(req,res);
@@ -391,7 +391,7 @@ router.post('/kyc-update',  async (req,res) =>
     }
 })
 
-router.get('/referrer-history/:code',  async (req,res) =>
+router.get('/referrer-history/:code', async (req,res) =>
 {
     try{
         await user.referrerHistory(req,res);
@@ -402,5 +402,23 @@ router.get('/referrer-history/:code',  async (req,res) =>
         }, 'users', 500));
     }
 })
+
+router.post('/kyc-detials', auth,async (req,res) =>
+{
+    try{
+        let { error } = user.kycDetialsValidation(req.body.data.attributes);
+        if (error) {
+            return res.status(400).send(controller.errorFormat(error, 'users', 400));
+        }
+        await user.kycDetials(req,res);
+    }
+    catch(err){
+        return res.status(500).send(controller.errorMsgFormat({
+            'message': err.message
+        }, 'users', 500));
+    }
+})
+
+
 
 module.exports = router;
